--- a/handyratingbar/src/main/res/values/attrs.xml
+++ b/handyratingbar/src/main/res/values/attrs.xml
@@ -7,6 +7,7 @@
         <attr name="numStars" format="integer"/>
         <attr name="rating" format="float" />
         <attr name="hasAmimation" format="boolean"/>
+        <attr name="allowTouchEvent" format="boolean"/>
 
     </declare-styleable>
 </resources>
