--- a/sample/src/main/res/layout-land/activity_main.xml
+++ b/sample/src/main/res/layout-land/activity_main.xml
@@ -51,7 +51,8 @@
         app:layout_constraintTop_toTopOf="@id/guideline"
 
         app:numStars="9"
-        app:starSpace="0dp" />
+        app:starSpace="0dp"
+        app:allowTouchEvent="true"/>
 
 
     <LinearLayout
